--- a/PerfSimulationApp/packages.config
+++ b/PerfSimulationApp/packages.config
@@ -8,6 +8,12 @@
   <package id="DotNetty.Transport" version="0.5.0" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights" version="2.8.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.8.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.8.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.8.0" targetFramework="net461" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.8.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.Azure.Amqp" version="2.3.5" targetFramework="net461" />
   <package id="Microsoft.Azure.Devices" version="1.17.0" targetFramework="net461" />
